--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,67 @@ a:hover {
   background-color: #fba301;
   box-shadow: 0px 4px 15px rgba(251, 184, 1, 0.35);
 }
+
+.grow-today {
+  background-color: #f5f7f9;
+  padding: 100px 0;
+}
+.grow-today .gap {
+  row-gap: 48px;
+}
+.grow-today .card-grow {
+  border-radius: 20px;
+  background-color: #ffffff;
+  overflow: hidden;
+  position: relative;
+}
+.grow-today .card-grow img {
+  width: 100%;
+  height: 200px;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+.grow-today .card-grow .badge-pricing {
+  position: absolute;
+  z-index: 1;
+  right: 16px;
+  top: 16px;
+  text-align: center;
+  padding: 5px 13px;
+  color: #01fb34;
+  font-weight: 500;
+  font-size: 14px;
+  background-color: #151a26;
+  border-radius: 41px;
+}
+.grow-today .card-grow .card-content {
+  padding: 20px;
+}
+.grow-today .card-grow .card-content .card-title {
+  font-weight: 500;
+  font-size: 18px;
+  color: #151a26;
+}
+.grow-today .card-grow .card-content .card-subtitle {
+  font-weight: 400;
+  font-size: 14px;
+  color: #a3a5aa;
+  margin: 8px 0 30px;
+}
+.grow-today .card-grow .card-content .description {
+  font-weight: 500;
+  font-size: 14px;
+  color: #151a26;
+}
+
+.checkout form .form-title {
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+.checkout form .form-title span {
+  font-weight: 400;
+  color: #a3a5aa;
+}
+.checkout form .form-title div {
+  font-weight: 500;
+}
