--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -184,3 +184,106 @@ a:hover {
 .checkout form .form-title div {
   font-weight: 500;
 }
+
+/* ---------- Container for the orbiting circles animation ---------- */
+.circle-orbit-container {
+  position: relative;
+  top: 25px;
+  left: 25px;
+  height: 600px;
+  width: 600px;
+}
+
+/* ---------- Inner orbit - This is the circles closest to the central point ---------- */
+.inner-orbit {
+  position: absolute;
+  top: 135px;
+  left: 135px;
+  width: 225px;
+  height: 225px;
+  border: 2px #f377199a solid;
+  border-radius: 100%;
+  -webkit-animation: spin-right 10s linear infinite;
+  animation: spin-right 10s linear infinite;
+}
+
+/* ---------- Repeating styles for the inner orbiting circles ---------- */
+.inner-orbit-cirlces {
+  position: absolute;
+  top: 62px;
+  left: -6px;
+  height: 10px;
+  width: 10px;
+  border-radius: 100%;
+  background-color: #9F98E6;
+}
+
+/* ---------- Middle orbit - This is the circles second closest to the central point ---------- */
+.middle-orbit {
+  position: absolute;
+  top: 65px;
+  left: 65px;
+  width: 385px;
+  height: 385px;
+  border: 2px #f377199a solid;
+  border-radius: 100%;
+  -webkit-animation: spin-right 15s linear infinite;
+  animation: spin-right 15s linear infinite;
+}
+
+/* ---------- Repeating styles for the inner orbiting circles ---------- */
+.middle-orbit-cirlces {
+  position: absolute;
+  top: 25px;
+  left: 17px;
+  height: 20px;
+  width: 20px;
+  border-radius: 100%;
+  background-color: #4A437F;
+}
+
+/* ---------- Outer orbit - This is the circles furthest away from the central point ---------- */
+.outer-orbit {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 505px;
+  height: 505px;
+  border: 2px #f377199a solid;
+  border-radius: 100%;
+  -webkit-animation: spin-right 20s linear infinite;
+  animation: spin-right 20s linear infinite;
+}
+
+/* ---------- Repeating styles for the outer orbiting circles ---------- */
+.outer-orbit-cirlces {
+  position: absolute;
+  top: -17px;
+  left: 125px;
+  height: 30px;
+  width: 30px;
+  border-radius: 100%;
+  background-color: #00FFCA;
+}
+
+/* ---------- Animation ---------- */
+
+@keyframes spin-right {
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spin-right {
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
