--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
 
-    --primary: 222.2 47.4% 11.2%;
+    --primary: #FF5B22;
     --primary-foreground: 210 40% 98%;
 
     --secondary: 210 40% 96.1%;
@@ -77,7 +77,7 @@
 }
 
 .app {
-  font-family: 'Poppins';
+  font-family: 'serif';
   @apply bg-gray-100 text-gray-500
 }
 
@@ -114,12 +114,6 @@ a:hover {
   -moz-text-fill-color: transparent;
 }
 
-.btn-orange {
-  color: #151a26;
-  font-weight: 600;
-  background-color: #fba301;
-  box-shadow: 0px 4px 15px rgba(251, 184, 1, 0.35);
-}
 
 .grow-today {
   background-color: #f5f7f9;
@@ -391,7 +385,7 @@ a:hover {
 /* Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: #ff4d30 #ffffff;
+  scrollbar-color: #FF5B22 #ffffff;
 }
 
 /* Chrome, Edge and Safari */
@@ -415,13 +409,97 @@ a:hover {
 
 *::-webkit-scrollbar-thumb {
   border-radius: 20px;
-  background-color: #ff4d30;
+  background-color: #FF5B22;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background-color: #ff4d30;
+  background-color: #FF5B22;
 }
 
 *::-webkit-scrollbar-thumb:active {
-  background-color: #ff2525;
+  background-color: #FF5B22;
+}
+
+/* --------Category card animations-------- */
+.item {
+  width: 400px;
+  height: 300px;
+  overflow: hidden;
+  cursor: pointer;
+  border-radius: 4px;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.img {
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  border-radius: 4px;
+  transition: all 0.7s ease;
+  background-image: url("https://images.unsplash.com/photo-1560275619-4773ab57fa29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1662&q=80");
+}
+
+.item:hover .img {
+  transform: scale(1.3) rotate(3deg);
+  background-color: #888;
+  background-blend-mode: multiply;
+}
+
+.title {
+  font-size: 3.5em;
+  font-weight: 700;
+  color: #fff;
+  text-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 30%;
+  left: 20%;
+  z-index: 2;
+  display: inline-block;
+  padding: 15px 20px;
+}
+.title::after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #fff;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+
+.item:hover .title {
+  top: 20%;
+  transition: all 0.7s ease;
+}
+.item:hover .title::after {
+  width: 100%;
+  left: 0;
+}
+
+.item:hover .description {
+  display: inline;
+  text-align: center;
+  position: absolute;
+  bottom: 10%;
+  left: 0;
+  padding: 2% 4%;
+  color: #fff;
+}
+
+.item2 .img {
+  transform: scale(1.3);
+}
+
+.item2:hover .img {
+  transform: scale(1);
+}
+
+h1 {
+  font-family: "Amatic SC", cursive;
+  font-size: 50px;
+  padding-bottom: 20px;
 }
