--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -421,10 +421,9 @@ a:hover {
   background-color: #FF5B22;
 }
 
+
 /* --------Category card animations-------- */
 .item {
-  width: 400px;
-  height: 300px;
   overflow: hidden;
   cursor: pointer;
   border-radius: 4px;
@@ -454,7 +453,7 @@ a:hover {
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 30%;
-  left: 20%;
+  left: 10%;
   z-index: 2;
   display: inline-block;
   padding: 15px 20px;
@@ -503,4 +502,10 @@ h1 {
   font-family: "Amatic SC", cursive;
   font-size: 50px;
   padding-bottom: 20px;
+}
+
+.slick-card{
+  display: flex;
+  gap: 10px;
+  margin: 0px 10px;
 }
