--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -498,14 +498,40 @@ a:hover {
   transform: scale(1);
 }
 
-h1 {
+/* h1 {
   font-family: "Amatic SC", cursive;
   font-size: 50px;
   padding-bottom: 20px;
+} */
+
+.ant-tabs-tab-active {
+  background: #FF5B22 !important;
+  color: white !important;
+  transition: none !important;
+}
+.ant-tabs-tab:hover {
+  background: #ff5922ba !important;
+  color: white !important;
+  transition: none !important;
+}
+.ant-tabs-content-holder {
+  background: white !important;
 }
 
-.slick-card{
-  display: flex;
-  gap: 10px;
-  margin: 0px 10px;
+.ant-tabs-tab-active .ant-tabs-tab-btn {
+  color: white !important;
+}
+.ant-tabs-nav-list {
+  background: #f5f5f5 !important;
+  margin: 5px 10px !important;
+}
+.ant-tabs-nav{
+  width: 200px;
+}
+/* Styles for mobile phones */
+@media (max-width: 767px) {
+  /* Your CSS for mobile devices here */
+  .ant-tabs-nav{
+    width: 100%;
+  }
 }
