--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,21 +120,25 @@ a:hover {
   background-color: #f5f7f9;
   padding: 100px 0;
 }
+
 .grow-today .gap {
   row-gap: 48px;
 }
+
 .grow-today .card-grow {
   border-radius: 20px;
   background-color: #ffffff;
   overflow: hidden;
   position: relative;
 }
+
 .grow-today .card-grow img {
   width: 100%;
   height: 200px;
   -o-object-fit: cover;
   object-fit: cover;
 }
+
 .grow-today .card-grow .badge-pricing {
   position: absolute;
   z-index: 1;
@@ -148,20 +152,24 @@ a:hover {
   background-color: #151a26;
   border-radius: 41px;
 }
+
 .grow-today .card-grow .card-content {
   padding: 20px;
 }
+
 .grow-today .card-grow .card-content .card-title {
   font-weight: 500;
   font-size: 18px;
   color: #151a26;
 }
+
 .grow-today .card-grow .card-content .card-subtitle {
   font-weight: 400;
   font-size: 14px;
   color: #a3a5aa;
   margin: 8px 0 30px;
 }
+
 .grow-today .card-grow .card-content .description {
   font-weight: 500;
   font-size: 14px;
@@ -172,10 +180,12 @@ a:hover {
   font-size: 20px;
   margin-bottom: 30px;
 }
+
 .checkout form .form-title span {
   font-weight: 400;
   color: #a3a5aa;
 }
+
 .checkout form .form-title div {
   font-weight: 500;
 }
@@ -279,88 +289,90 @@ a:hover {
 
 /* ---------- Blog Card ---------- */
 .card {
-	background-color: white;
-	color: #272727;
-	padding: 20px;
-	border-radius: 10px;
-	border: 0px;
-	border-color: tomato;
-	border-style: solid;
-	transition: 200ms;
-    max-width: 380px;
+  background-color: white;
+  color: #272727;
+  padding: 20px;
+  border-radius: 10px;
+  border: 0px;
+  border-color: tomato;
+  border-style: solid;
+  transition: 200ms;
+  max-width: 380px;
 }
 
 .card:hover {
-	transition: 200ms;
-	border: 3px;
-	border-color: tomato;
-	border-style: solid;
+  transition: 200ms;
+  border: 3px;
+  border-color: tomato;
+  border-style: solid;
 }
 
 .card-header {
-	display: flex;
-	flex-wrap: nowrap;
-	align-items: center;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
 
 }
 
 .profile {
-	width: 2.5rem;
-	height: 2.5rem;
-	background-color: tomato;
-	border-radius: 50%;
-	margin: 10px;
-	font-size: 20pt;
-	text-align: center;
-	font-weight: bold;
-	color: white;
-	justify-content: center;
+  width: 2.5rem;
+  height: 2.5rem;
+  background-color: tomato;
+  border-radius: 50%;
+  margin: 10px;
+  font-size: 20pt;
+  text-align: center;
+  font-weight: bold;
+  color: white;
+  justify-content: center;
 }
 
 .letter {
-	vertical-align: middle;
+  vertical-align: middle;
 }
 
 .card-title-group {
-	justify-content: center;
+  justify-content: center;
 }
 
 .card-title {
-	flex: 0.5;
-	font-size: large;
-	margin-bottom: 0;
-	margin-top: 0;
+  flex: 0.5;
+  font-size: large;
+  margin-bottom: 0;
+  margin-top: 0;
 }
+
 .card-date {
-	flex: 0.3;
-	font-size: small;
-	margin-top: 0;
+  flex: 0.3;
+  font-size: small;
+  margin-top: 0;
 }
 
 .card-image {
-	border-radius: 10px;
-	margin-bottom: 10px;
-	margin-top: 10px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
+
 .card-like-icon {
-	height: 25px;
+  height: 25px;
 }
 
 .card-text {
-	width: 350px;
-	font-size: medium;
+  width: 350px;
+  font-size: medium;
 }
 
 .card-like-bar {
-	display: flex;
-	align-items: center;
-	margin-top: 20px;
-	justify-content: space-between;
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  justify-content: space-between;
 }
 
 .like-text {
-	font-size: small;
-	margin-left: 10px;
+  font-size: small;
+  margin-left: 10px;
 }
 
 
@@ -373,6 +385,7 @@ a:hover {
   text-align: center;
   padding: 0;
 }
+
 #components-tooltip-demo-placement .ant-btn {
   margin-left: 8px;
   margin-right: 0;
@@ -458,6 +471,7 @@ a:hover {
   display: inline-block;
   padding: 15px 20px;
 }
+
 .title::after {
   background: none repeat scroll 0 0 transparent;
   bottom: 0;
@@ -475,6 +489,7 @@ a:hover {
   top: 20%;
   transition: all 0.7s ease;
 }
+
 .item:hover .title::after {
   width: 100%;
   left: 0;
@@ -509,11 +524,13 @@ a:hover {
   color: white !important;
   transition: none !important;
 }
+
 .ant-tabs-tab:hover {
   background: #ff5922ba !important;
   color: white !important;
   transition: none !important;
 }
+
 .ant-tabs-content-holder {
   background: white !important;
 }
@@ -521,19 +538,61 @@ a:hover {
 .ant-tabs-tab-active .ant-tabs-tab-btn {
   color: white !important;
 }
+
 .ant-tabs-nav-list {
   background: #f5f5f5 !important;
   margin: 5px 10px !important;
 }
-.ant-tabs-nav{
+
+.ant-tabs-nav {
   width: 200px;
 }
+
+.bookingInfo {
+  display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    /* height: 350px; */
+}
+
+.bookingInfo-image {
+  width: 40%;
+}
+
+.bookingInfo-description {
+  width: 60%;
+ }
+
+.bookingInfo-price{
+  display: flex;
+  justify-content: space-between;
+}
+
 /* Styles for mobile phones */
 @media (max-width: 767px) {
+
   /* Your CSS for mobile devices here */
-  .ant-tabs-nav{
+  .ant-tabs-nav {
     width: 100%;
   }
+
+  .bookingInfo {
+    flex-direction: column;
+    /* margin-top: 200px; */
+  }
+
+  .bookingInfo-image{
+    width: 100%;
+  }
+
+  .bookingInfo-description {
+    width: 100%;
+   }
+   .bookingInfo-price{
+    flex-direction: column-reverse;
+   }
 }
 
 
@@ -594,9 +653,7 @@ a:hover {
     display: block;
   }
 
-  #check:checked ~ .menu {
+  #check:checked~.menu {
     right: 0;
   }
 }
-
-
