--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -570,9 +570,15 @@ a:hover {
   display: flex;
   justify-content: space-between;
 }
-
+.user_Dashboard{
+  margin-top: 10px;
+}
 /* Styles for mobile phones */
 @media (max-width: 767px) {
+
+  .user_Dashboard{
+    margin-top: 95px;
+  }
 
   /* Your CSS for mobile devices here */
   .ant-tabs-nav {
